testdata/baselines/reference/conformance/ambientModuleImportAttributesTextAndBytes.types
//// [tests/cases/conformance/importAttributes/ambientModuleImportAttributesTextAndBytes.ts] ////

=== /ambient.d.ts ===
declare module "*" with { type: "text" } {
>"*" : typeof import("*")
>type : any

    const data: string;
>data : string

    export default data;
>data : string
}
declare module "*" with { type: "bytes" } {
>"*" : typeof import("*")
>type : any

    const data: Uint8Array<ArrayBuffer>;
>data : Uint8Array<ArrayBuffer>

    export default data;
>data : Uint8Array<ArrayBuffer>
}

=== /main.ts ===
import textData from "./file.txt" with { type: "text" };
>textData : string
>type : any

import bytesData from "./file.txt" with { type: "bytes" };
>bytesData : Uint8Array<ArrayBuffer>
>type : any

// textData is string
textData.charAt(0);
>textData.charAt(0) : string
>textData.charAt : (pos: number) => string
>textData : string
>charAt : (pos: number) => string
>0 : 0

// bytesData is Uint8Array
bytesData.byteLength;
>bytesData.byteLength : number
>bytesData : Uint8Array<ArrayBuffer>
>byteLength : number

// Attribute mismatches are caught by the usual assignability checks.
const asString: string = textData;
>asString : string
>textData : string

const asBytes: Uint8Array = bytesData;
>asBytes : Uint8Array<ArrayBufferLike>
>bytesData : Uint8Array<ArrayBuffer>

const wrong: number = textData; // error: string is not assignable to number
>wrong : number
>textData : string

